--- a/HTML5/HTML5-8002117067徐梓涵-实验二/code/html/index.html
+++ b/HTML5/HTML5-8002117067徐梓涵-实验二/code/html/index.html
@@ -10,6 +10,6 @@
             <p class="CSS2"><strong class="a">in August</strong><strong class="b"> 28th.2015</strong></p>
             <h2><strong class="CSS5">2015</strong><strong class="b"> 秋装全面上新</strong></h2>
             <p class="CSS3">全场两件<strong>包邮</strong></p>
-            <p class="CSS4">所有邂逅相逢，所有萍聚水遇，都在缘分的天空下慢慢演绎。一款柔情含蓄的衣服，美丽的</p>
+            <p class="CSS4">所有邂逅相逢，所有萍聚水遇，都在缘分的天空下慢慢演绎。一款柔情含蓄的衣服，美丽的衣服</p>
     </body>
 </html>
